PROJECT(yijinjing LANGUAGES C CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 3.17)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_POSITION_INDEPENDENT_CODE ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-unused -Wno-stringop-truncation")
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "")

FILE(GLOB TARGET_CPP "src/*/*.cpp")

SET(INCS ${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${INCS})

SET(LIBS pthread
         stdc++fs)

ADD_LIBRARY(FlashStore SHARED ${TARGET_CPP})
TARGET_LINK_LIBRARIES(FlashStore PRIVATE ${LIBS})

ADD_SUBDIRECTORY(tests)